got navbar collapse feature working, resized products page images to display correctly, worked on product detail page formating, and updated product 6 description to a paragraph

--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,7 @@ body {
   left: 0;
   padding-top: 5px;;
   /*font-family: 'Alegreya Sans', sans-serif;*/
-  font-family: 'Josefin Slab', serif;
+  /*font-family: 'Josefin Slab', serif;*/
   font-weight:400;
   width: 100%;
   /*height: 68px;*/
@@ -43,11 +43,19 @@ body {
   z-index: 1;
 }
 
+.navbar-color {
+  background-color: rgba(228, 237, 242, 0.75);
+}
+
+.navbar-height {
+  height: 60px;
+}
+
 .brand {
   /*height: 100%;*/
   padding-left: 30px;
-  font-size: 46px;
-  margin: auto;
+  font-size: 40px;
+  padding-top: 20px;
 }
 
 .hero {
@@ -64,10 +72,13 @@ body {
 .navbar-icons {
   /*height: 34px;
   width: 34px;*/
-  font-size: 28px;
+  padding-left: 10px;
+  margin: auto;
+  font-size: 20px;
   text-align: center;
   align-items: center;
-  height: 100%;
+  padding-top: 18px;
+  /*height: 100%;*/
 }
 
 /*img .navbar-icons {
@@ -94,12 +105,12 @@ body {
 }
 
 .product-image {
-  max-width: 350px;
-  max-height: 350px;
+  max-width: 275px;
+  max-height: 300px;
 }
 
 .productpage-image {
-  max-width: 70%;
+  max-width: 80%;
   max-height: 550px;
   display: block;
   /*width: 50%;*/
@@ -109,4 +120,9 @@ body {
 
 .product-description {
   text-align: left;
+  border-top: solid lightblue 1px;
+}
+
+.product-price {
+
 }
